--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="@string/description" />
+            android:text="@string/description"> <requestFocus /> </TextView>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -48,32 +48,30 @@
 
         <Button
             android:layout_width="150dp"
-            android:layout_height="45dp"
-            android:text="take pic"
-            android:onClick="addPhoto" />
+            android:layout_height="60dp"
+            android:text="@string/takePic"
+            android:onClick="addPhoto"
+            android:id="@+id/phBut"/>
 
         <RelativeLayout android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="horizontal"
-            android:visibility="invisible"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
             android:id="@+id/photo">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"/>
 
             <LinearLayout android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_marginRight="16dp"
+                android:layout_marginEnd="16dp"
                 android:id="@+id/phSettings">
 
                 <Button android:layout_width="125dp"
                     android:layout_height="45dp"
-                    android:text="@string/loadBut"/>
+                    android:text="@string/loadBut"
+                    android:id="@+id/loadIm"
+                    android:onClick="loadImage"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -105,6 +103,17 @@
 
                 </RadioGroup>
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/image"
+                android:layout_toRightOf="@id/phSettings"
+                android:layout_toEndOf="@id/phSettings"
+                android:scaleType="fitStart"
+                android:id="@+id/picture"/>
         </RelativeLayout>
 
         <LinearLayout
