--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -136,10 +138,12 @@
                 android:layout_marginTop="5dp"
                 android:textSize="20sp"/>
             <Button
-                android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:layout_width="200dp"
+                android:layout_height="60dp"
                 android:text="@string/send"
-                android:onClick="send" />
+                android:background="@color/colorAccent"
+                android:onClick="send"
+                android:layout_gravity="center"/>
         </LinearLayout>
 
     </LinearLayout>
