--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="@string/description"> <requestFocus /> </TextView>
+            android:text="@string/description"/>
 
         <CheckBox
             android:layout_width="wrap_content"
